--- a/src/app/templates/base.jinja2
+++ b/src/app/templates/base.jinja2
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock title %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', path='/css/root.css') }}">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="{{ url_for('static', path='/css/reset.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='/css/effects.css') }}">
+    <link rel='stylesheet'
+          href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 </head>
 <body>
-    {% import "components/buttons.jinja2" as buttons %}
-    {% import "components/inputs.jinja2" as inputs %}
-    {% import "components/cards.jinja2" as cards %}
-    <section>
-        {% block content %} {% endblock content %}
-    </section>
+{% import "components/buttons.jinja2" as buttons %}
+{% import "components/inputs.jinja2" as inputs %}
+{% import "components/cards.jinja2" as cards %}
+<section>
+    {% block content %} {% endblock content %}
+</section>
 </body>
 </html>
