--- a/src/app/templates/layouts/home.jinja2
+++ b/src/app/templates/layouts/home.jinja2
@@ -4,18 +4,25 @@
 
 {% block content %}
     <div class="w-full h-screen flex items-center justify-center flex-col gap-10">
-        <section class="flex justify-center w-1/2 gap-10">
-            {{ cards.basic_card() }}
-            {{ cards.basic_card() }}
+        <section class="flex justify-center items-center w-1/2 h-1/3 gap-10 bg-gray-100 rounded-xl border-2">
+            <div class="bg-gray-200 h-2/3 w-1/4 rounded-xl border-2 border-gray-300 flex justify-center items-center">
+                {{ cards.basic_card(class="card_random_name") }}
+            </div>
+            <div class="bg-gray-200 h-2/3 w-1/4 rounded-xl border-2 border-gray-300 flex justify-center items-center">
+                {{ cards.basic_card(class="card_random_email") }}
+            </div>
+            <div class="bg-gray-200 h-2/3 w-1/4 rounded-xl border-2 border-gray-300 flex justify-center items-center">
+                {{ cards.address_card(class="card_random_address") }}
+            </div>
         </section>
         <section class="flex gap-8">
             {% for item in data %}
                 {% if item == "Random Name" %}
-                    {{ buttons.basic_button(label=item, class="btn_random_name", tag_i="fi fi-rr-cursor-finger") }}
+                    {{ buttons.basic_button(label=item, class="btn_random_name", loading_icon=True) }}
                 {% elif item == "Random E-mail" %}
-                    {{ buttons.basic_button(label=item, class="btn_random_email") }}
+                    {{ buttons.basic_button(label=item, class="btn_random_email", loading_icon=True) }}
                 {% elif item == "Random Address" %}
-                    {{ buttons.basic_button(label=item, class="btn_random_address") }}
+                    {{ buttons.basic_button(label=item, class="btn_random_address", loading_icon=True) }}
                 {% else %}
                     {{ buttons.basic_button(label=item, class="btn_default") }}
                 {% endif %}
@@ -23,45 +30,5 @@
         </section>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script>
-    $(document).ready(function () {
-        $("button.btn_random_name, button.btn_random_email, button.btn_random_address").click(function () {
-
-            const $btn = $(this);
-            const $icon = $btn.find("i");
-            const originalClasses = $icon.attr("class");
-
-            $icon.removeClass().addClass("fi fi-rr-loading animate-spin-loading");
-
-            let url = "";
-            if ($btn.hasClass("btn_random_name")) url = "/api/name";
-            else if ($btn.hasClass("btn_random_email")) url = "/api/email";
-            else if ($btn.hasClass("btn_random_address")) url = "/api/address";
-
-            if (!url) {
-                alert("URL não definida.");
-                return;
-            }
-
-            $.ajax({
-                url: url,
-                type: "GET",
-                dataType: "json",
-                success: function (res) {
-                    const message = res.message || "Sem mensagem";
-                    $("#basic_card_label_field").text(message);
-                },
-                error: function () {
-                    alert("Erro na requisição.");
-                },
-                complete: function () {
-                    $icon.removeClass().addClass("fi fi-rr-check pt-1");
-                    setTimeout(() => {
-                        $icon.removeClass().addClass(originalClasses);
-                    }, 2000);
-                }
-            });
-        });
-    });
-</script>
+    <script src="{{ url_for('static', path='/js/loadFakeData.js') }}"></script>
 {% endblock content %}
